Import of TIMA/XML-Atom-Syndication-0.02 from CPAN.
gitpan-cpan-distribution: XML-Atom-Syndication
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TIMA/XML-Atom-Syndication-0.02.tar.gz
gitpan-cpan-author:       TIMA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,12 @@
 Revision history for Perl extension XML::Atom::Syndication
 
+0.01 Apr 15 2004
+	- Implemented xpath_namespace method for registering other 
+	  namespace mappings for XPath queries.
+	- Fixed mishandling of mirror content in get method.
+	- Removed _ from XML::Parser->parsefile method call.
+	- Implemented CGI->param like handling of XPath queries with the
+	  Element query method.
+
 0.01 Apr 07 2004
 	- Initial release into CPAN.
