--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension XML::Atom::Syndication
 
+0.05 Apr 28 2004
+    - Fixed undefined subroutine bug in Element _xpath_attribues_name.
+    - Clarified qname method usage in docs.
+
 0.04 Apr 27 2004
     - Exposed _xpath_name as qname in Element.
     - Dies if an unregistered XOath prefix is namespace URI is 
