Import of TIMA/XML-Atom-Syndication-0.08 from CPAN.
gitpan-cpan-distribution: XML-Atom-Syndication
gitpan-cpan-version:      0.08
gitpan-cpan-path:         TIMA/XML-Atom-Syndication-0.08.tar.gz
gitpan-cpan-author:       TIMA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension XML::Atom::Syndication
 
+0.08 Sep 23 2004
+    - Add proper handling of unknown namespace prefixes.
+
 0.07 May 03 2004
     - Fixed bug in Element qname method.
 
