--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-XML::Atom::Syndication is a simple lightweight client for consuming Atom syndication feeds.INSTALLATIONTo install this module type the following:    perl Makefile.PL    make     make test     make installDEPENDENCIESThis module requires these other modules and libraries:    XML::Parser     XML::Parser::Style::Elemental     LWP::Simple    Class::XPathCOPYRIGHT AND LICENCEThe software is released under the Artistic License. The terms ofthe Artistic License are described athttp://www.perl.com/language/misc/Artistic.html. Except whereotherwise noted, XML::Atom::Syndication is Copyright 2004, TimothyAppnel, cpan@timaoutloud.org. All rights reserved.
+XML::Atom::Syndication is a simple lightweight client for consuming Atom syndication feeds.INSTALLATIONTo install this module type the following:    perl Makefile.PL    make     make test     make installDEPENDENCIESThis module requires these other modules and libraries:    XML::Elemental 2.0    Encode    MIME::Base64    Class::ErrorHandler    Test::More COPYRIGHT AND LICENCEThe software is released under the Artistic License. The terms ofthe Artistic License are described athttp://www.perl.com/language/misc/Artistic.html. Except whereotherwise noted, XML::Atom::Syndication is Copyright 2004-2005, TimothyAppnel, cpan@timaoutloud.org. All rights reserved.
