Import of TIMA/XML-Atom-Syndication-0.9_05 from CPAN.
gitpan-cpan-distribution: XML-Atom-Syndication
gitpan-cpan-version:      0.9_05
gitpan-cpan-path:         TIMA/XML-Atom-Syndication-0.9_05.tar.gz
gitpan-cpan-author:       TIMA
gitpan-cpan-maturity:     developer

--- a/TODO
+++ b/TODO
@@ -1,10 +1,18 @@
 TO DO
 
-* Whole new 1.0 centric test suite.
-
 * General code and documentation clean-up.
 
 * Writer: better handling of declared namespace?
 
 * Namespace declarations are stored like attributes. Is this
 a problem?
+
+* Should accessors representing elements with defaults
+return those default values if nothing has been defined?
+
+* lang and base finder that will check for inheritance?
+
+* Relative links processing utility?
+
+* Accessors to special links such as rel="alternate" and
+rel="self"?
