Import of TIMA/XML-Atom-Syndication-0.94 from CPAN.
gitpan-cpan-distribution: XML-Atom-Syndication
gitpan-cpan-version:      0.94
gitpan-cpan-path:         TIMA/XML-Atom-Syndication-0.94.tar.gz
gitpan-cpan-author:       TIMA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension XML::Atom::Syndication
 
+0.94 Aug 17 2006
+    - Added inner_atom method to the feed, entry and source classes + tests
+    - A few more documentation fixes
+
 0.93 Jul 21 2006
     - Documentation fixes. (Thanks to John Gruber and gdsotirov)
     - Fixed bug were I misread section 3.1.1.3 and was wrapping XHTML 
