--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension XML::Atom::Syndication
 
+0.941 Dec 31 2007
+    - Fix dangling references in pseudo doc object used by inner_atom
+    - Incremented XML::Elemental dependency to v2.01
+
 0.94 Aug 17 2006
     - Added inner_atom method to the feed, entry and source classes + tests
     - A few more documentation fixes
